Fixed an issue where the CTRL-F interface would be white-on-light grey in dark mode. -moz-win-glass only applies on non-fullscreen mainwindow (fixes rounded corners in fullscreen)

--- a/chrome/special/windows_11_10.css
+++ b/chrome/special/windows_11_10.css
@@ -49,7 +49,7 @@
     {
         @media (-moz-windows-accent-color-in-titlebar: 0)
         {
-            #main-window:is(:not(:-moz-lwtheme), [lwt-default-theme-in-dark-mode])
+            #main-window:not([sizemode="fullscreen"]):is(:not(:-moz-lwtheme), [lwt-default-theme-in-dark-mode])
             {
                 appearance: -moz-win-glass !important;
                 background-color: transparent !important;
@@ -76,6 +76,11 @@
             :root:is(:not(:-moz-lwtheme), [lwt-default-theme-in-dark-mode]) .titlebar-min
             {
                 border-bottom-left-radius: 8px !important;
+            }
+
+            findbar
+            {
+                background: transparent !important;
             }
         }
     }
